--- a/book_java/src/main/resources/application.yml
+++ b/book_java/src/main/resources/application.yml
@@ -1,13 +1,17 @@
+server:
+  port: 9999
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/book?characterEncoding=UTF-8&useSSL=true&serverTimezone=UTC
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-server:
-  port: 9999
+
+  #开启jpa的sql打印
+#  jpa:
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
+
